# biofilm-embeddings

./: .gitignore  .gitmodules  README.md  pyproject.toml
assets/: dora5.icns
scripts/: buildIcons.py  extract_cluster_embeddings.sh  extract_embeddings.sh  extract_reimaging_embeddings.sh  extract_training_embeddings.sh  installDesktopShortcut.py  setup.sh
src/biofilm_embeddings/embeddings/: extract_one_plate.py  extract_run.py  extractor.py
src/biofilm_embeddings/gui/: app.py  buildinfo.py  plate_discovery.py  state.py
src/biofilm_embeddings/gui/tabs/: conditions.py  parameters.py  preview.py  run.py  test_well.py
src/microtyper_vision/embeddings/: extract_one_plate.py
src/microtyper_vision/gui/tabs/: parameters.py  preview.py  run.py  test_well.py
src/multiWellAnalysis/embeddings/: config.py  dataset.py  extract_one_plate.py  extractor.py
src/multiWellAnalysis/gui/: app.py  state.py
src/multiWellAnalysis/gui/tabs/: parameters.py  preview.py  run.py  test_well.py
src/multiWellAnalysis/processing/: __init__.py  analysis_main.py
tests/: test_integration.py
